release 3.0.4